--- a/src/components/Menu/Foods/foodlistsmall.css
+++ b/src/components/Menu/Foods/foodlistsmall.css
@@ -2,11 +2,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-bottom: 50px;
+  margin: 0 10px 10px 10px;
+  overflow: hidden;
+  margin-bottom: 20%;
 }
 .category-carousel {
   margin: 0;
   overflow: hidden;
+  max-width: 360px;
 }
 
 .cat-item {
@@ -78,8 +81,9 @@
   height: 23px;
   border: 1px solid #5a7360;
   border-radius: 20px;
+  margin-right: 20px;
   background-color: transparent;
-  margin-right: 10px;
+
   color: #5a7360;
 }
 .food-item {
@@ -87,7 +91,7 @@
   flex-direction: row;
   box-sizing: border-box;
   align-items: center;
-  width: 328px;
+  width: 340px;
   height: 110px;
   overflow: hidden;
   border-bottom: 0.4px solid #d9d9d9;
@@ -132,16 +136,18 @@
   position: fixed;
   display: flex;
   bottom: 0;
-  width: 360px;
   height: 86px;
   background: #ffffff;
-  box-shadow: 0px -1px 4px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px -1px 4px rgba(0, 0, 0, 0.5);
+  width: 360px;
+  margin-left: -5px;
+  padding: 10px 0px 5px 5px;
 }
 
 .cart-btn {
   width: 328px;
   height: 48px;
-  margin: 10px;
+  margin: 10px auto;
   background: #5a7360;
   border-radius: 20px;
   border: none;
