--- a/src/components/Menu/MainMenu/menu.css
+++ b/src/components/Menu/MainMenu/menu.css
@@ -1,11 +1,11 @@
 .Main {
   background-color: white;
-  margin: -20px 0px 0 0px;
-  padding: 20px;
+  margin: 0;
+  padding: 20px 0px 20px 5px;
   display: flex;
   flex-direction: column;
   height: max-content;
-  overflow: scroll;
+  overflow: hidden;
   max-width: 360px;
   margin: 0 auto;
 }
@@ -14,14 +14,14 @@
   font-size: 20px;
   line-height: 30px;
   color: #5a7360;
-  margin: 30px 0 0 0;
+  margin: 30px 10px 0px 10px;
 }
 
 .title {
   font-weight: 600;
   font-size: 24px;
   line-height: 36px;
-  margin: 0 0 10px 0;
+  margin: 0 10px 10px 10px;
 }
 .search {
   width: 328px;
@@ -30,7 +30,7 @@
   border-radius: 20px;
   border: none;
   list-style: none;
-  margin: 0 0 10px 0;
+  margin: 0 10px 10px 10px;
 }
 input[type="text"]::placeholder {
   padding-left: 10px;
