--- a/src/components/Payment/PopUp/popup.css
+++ b/src/components/Payment/PopUp/popup.css
@@ -3,18 +3,19 @@
   height: 100%;
   position: absolute;
   background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  align-items: center;
 }
 .item-cont {
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: white;
-  margin: 20px;
+  margin: auto;
   background: #ffffff;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
   border-radius: 20px;
   padding: 20px;
-  margin-top: 50%;
 }
 
 .bank-img {
