--- a/src/components/Payment/PopUp/popup.css
+++ b/src/components/Payment/PopUp/popup.css
@@ -5,6 +5,7 @@
   background-color: rgba(0, 0, 0, 0.8);
   display: flex;
   align-items: center;
+  max-width: 360px;
 }
 .item-cont {
   display: flex;
