--- a/src/components/Checkout/checkout.css
+++ b/src/components/Checkout/checkout.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   background: #f7f8fa;
   height: 100vh;
+  max-width: 360px;
+  margin: 0 auto;
 }
 
 .cont-head {
@@ -31,6 +33,9 @@
   justify-content: center;
   margin-top: 5px;
   width: 100%;
+  max-height: 800px;
+  overflow: hidden;
+  overflow-y: scroll;
 }
 
 .summ-ttl {
@@ -42,10 +47,13 @@
   color: #353535;
 }
 
+.order-cont {
+  overflow: hidden;
+  overflow-y: scroll;
+}
 .order-list {
   display: flex;
   margin: 5px 10px;
-  justify-content: space-between;
 }
 
 .order-desc {
@@ -82,6 +90,7 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  margin-left: auto;
 }
 
 .quant-btn {
