--- a/src/components/Menu/Foods/FoodDetails/fooddetails.css
+++ b/src/components/Menu/Foods/FoodDetails/fooddetails.css
@@ -1,5 +1,7 @@
 .food-detail-cont {
+  margin: 0 auto;
   display: flex;
+  max-width: 360px;
   flex-direction: column;
   align-items: center;
   background-color: #f7f8fa;
