--- a/src/components/Payment/QRIS Payment/Popup/popup.css
+++ b/src/components/Payment/QRIS Payment/Popup/popup.css
@@ -55,10 +55,11 @@
 }
 
 .button-cont {
-  width: 90%;
+  width: 80%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin: 20px 0;
 }
 
 .cancel-btn {
@@ -83,13 +84,4 @@
   font-size: 12px;
   line-height: 18px;
   color: #ffffff;
-}
-
-.cash-input {
-  margin: 0 10px 10px 10px;
-  background: #dee3df;
-  border-radius: 20px;
-  border: none;
-  width: 249px;
-  height: 38px;
 }
