--- a/src/components/Checkout/Ordertype/ordertype.css
+++ b/src/components/Checkout/Ordertype/ordertype.css
@@ -14,7 +14,7 @@
   flex-direction: column;
   align-items: center;
   width: 303px;
-  height: 228px;
+  height: 258px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   background-color: white;
   border-radius: 20px;
@@ -53,4 +53,23 @@
   font-size: 16px;
   line-height: 24px;
   color: #ffffff;
+}
+
+.ordertype-btn:active {
+  background-color: #000a02;
+}
+
+.ordertype-btn:focus {
+  background-color: #000a02;
+}
+.confirm-btn {
+  width: 120px;
+  height: 30px;
+  margin: 10px 0;
+  border: none;
+  background: #506655;
+  border-radius: 20px;
+  color: white;
+  font-size: 16px;
+  font-weight: 500;
 }
