--- a/src/components/Cashier/Sidebar/sidebar.css
+++ b/src/components/Cashier/Sidebar/sidebar.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: space-between;
   height: 100%;
-  position: absolute;
+  position: fixed;
   background-color: white;
   overflow: hidden;
   left: 0;
