--- a/src/components/Cashier/Home/home.css
+++ b/src/components/Cashier/Home/home.css
@@ -1,9 +1,17 @@
 body {
   background-color: #dee3df;
 }
+.cashier-cont {
+  max-height: 850px;
+  max-width: 1200px;
+  height: 850px;
+  width: 1200px;
+  display: flex;
+  justify-content: end;
+}
 .home-cont {
   background-color: #dee3df;
-  margin-left: 120px;
+  margin-left: 70px;
   display: flex;
   overflow: hidden;
   justify-content: space-between;
@@ -61,7 +69,7 @@ body {
   color: rgba(53, 53, 53, 0.6);
 }
 
-.order-status {
+.order-status-wait {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -69,6 +77,40 @@ body {
   padding: 10px;
   gap: 10px;
   background: #f6744c;
+  border-radius: 4px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  color: #ffffff;
+}
+
+.order-status-check {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  gap: 10px;
+  background: #6de22a;
+  border-radius: 4px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  color: #ffffff;
+}
+
+.table-type {
+  display: flex;
+  flex-direction: column;
+}
+.order-status-paid {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  gap: 10px;
+  background: #008311;
   border-radius: 4px;
   font-weight: 600;
   font-size: 16px;
