--- a/src/components/Cashier/Cashier/Place Order/placeorder.css
+++ b/src/components/Cashier/Cashier/Place Order/placeorder.css
@@ -17,7 +17,7 @@
   align-items: center;
   background-color: white;
   width: 391px;
-  height: 449px;
+  height: 400px;
   border-radius: 20px;
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
 }
@@ -84,6 +84,22 @@
 .typebtn-cashier-cont {
   display: flex;
   align-items: center;
-  width: 100%;
-  justify-content: space-between;
+  width: 351px;
+  justify-content: center;
+}
+
+.typebtn-cashier-cont button {
+  width: 100px;
+  height: 34px;
+  background-color: #5a7360;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  font-size: 14px;
+  font-weight: 500;
+  margin: 10px 10px 15px 10px;
+}
+
+.typebtn-cashier:focus {
+  border: 2px black solid;
 }
