--- a/src/components/Cashier/Home/home.css
+++ b/src/components/Cashier/Home/home.css
@@ -1,133 +1,10 @@
-body {
-  background-color: #dee3df;
+/* media queries responsive */
+@media (min-aspect-ratio: 16/9) {
 }
-.cashier-cont {
-  max-height: 850px;
-  max-width: 1200px;
-  height: 850px;
-  width: 1200px;
-  display: flex;
-  justify-content: end;
-}
-.home-cont {
-  background-color: #dee3df;
-  margin-left: 70px;
-  display: flex;
-  overflow: hidden;
-  justify-content: space-between;
+@media (max-aspect-ratio: 9/16) {
 }
 
-.home-ttl {
-  margin-bottom: 10px;
-}
-
-.order-card-list {
-  margin-top: 0;
-  max-height: 750px;
-  overflow: hidden;
-  overflow-y: scroll;
-}
-
-.order-list-admin {
-  display: flex;
-  flex-direction: column;
-}
-
-.order-card {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 32px;
-  gap: 10px;
-  width: 530px;
-  height: 120px;
-  background: #ffffff;
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.4);
-  border-radius: 8px;
-  margin-bottom: 16px;
-}
-
-.order-table {
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 36px;
-  color: #353535;
-}
-
-.order-receiver {
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 30px;
-  color: #353535;
-}
-
-.order-id {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  color: rgba(53, 53, 53, 0.6);
-}
-
-.order-status-wait {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
-  gap: 10px;
-  background: #f6744c;
-  border-radius: 4px;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 24px;
-  color: #ffffff;
-}
-
-.order-status-check {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
-  gap: 10px;
-  background: #6de22a;
-  border-radius: 4px;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 24px;
-  color: #ffffff;
-}
-
-.table-type {
-  display: flex;
-  flex-direction: column;
-}
-.order-status-paid {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
-  gap: 10px;
-  background: #008311;
-  border-radius: 4px;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 24px;
-  color: #ffffff;
-}
-
-.detail-cont {
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-height: 834px;
-  height: 834px;
-  width: 416px;
-  padding: 0px 26px;
-}
+/* detail pembayaran */
 
 .detail-cont h1 {
   align-self: flex-start;
@@ -257,4 +134,456 @@ p {
 
 .current-btn-cont {
   display: flex;
+}
+/* detail pembayaran */
+.detail-cont {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-height: 834px;
+  height: 800px;
+  width: 416px;
+  padding: 0px 26px;
+  margin-left: 70px;
+}
+
+.detail-cont h1 {
+  align-self: flex-start;
+  margin-left: 2px;
+}
+
+.detail-header-lg {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.selected-order {
+  height: 350px;
+  overflow: hidden;
+  overflow-y: scroll;
+}
+
+.order-detail-list {
+  display: flex;
+  align-items: center;
+}
+
+.product-detail {
+  margin: 0 20px;
+}
+
+.product-detail,
+p {
+  margin: 0;
+}
+
+.product-detail span {
+  font-weight: bold;
+}
+.order-img {
+  width: 80px;
+  height: 80px;
+  border-radius: 10px;
+  margin: 10px 10px 10px 0;
+}
+
+.check-btn {
+  width: 180px;
+  height: 48px;
+  background: #dee3df;
+  border: 1px solid #5a7360;
+  border-radius: 20px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  color: #5a7360;
+  margin: 10px 5px;
+}
+
+.delete-order-btn {
+  width: 180px;
+  height: 48px;
+  background: #f6744c;
+  border: none;
+  border-radius: 20px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  color: white;
+  margin: 10px 5px;
+}
+
+.price-detail-cashier {
+  padding: 10px;
+  width: 364px;
+  background: #dee3df;
+  border-radius: 20px;
+  gap: 10px;
+  margin: 15px 0;
+}
+.subtotal-detail {
+  display: flex;
+  justify-content: space-between;
+}
+.subtotal-detail p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  margin: 5px 5px;
+}
+
+.tax-detail {
+  display: flex;
+  justify-content: space-between;
+}
+
+.tax-detail p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  margin: 5px 5px;
+}
+
+.total-detail {
+  display: flex;
+  justify-content: space-between;
+}
+
+.total-detail p {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 30px;
+  margin: 5px 5px;
+}
+
+.complete-btn {
+  padding: 12px 32px;
+  gap: 10px;
+  background: #5a7360;
+  border: none;
+  border-radius: 20px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  color: white;
+  width: 384px;
+  height: 48px;
+  margin: 10px 0 20px 0;
+}
+
+.current-btn-cont {
+  display: flex;
+}
+.home-ttl {
+  margin-bottom: 10px;
+}
+.order-card-list {
+  margin-top: 0;
+  max-height: 750px;
+  overflow: hidden;
+  overflow-y: scroll;
+}
+
+.order-list-admin {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.order-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 32px;
+  gap: 10px;
+  width: 90%;
+  height: 120px;
+  background: #ffffff;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.4);
+  border-radius: 8px;
+  margin-bottom: 16px;
+}
+
+.order-table {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 36px;
+  color: #353535;
+}
+
+.order-receiver {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 30px;
+  color: #353535;
+}
+
+.order-id {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: rgba(53, 53, 53, 0.6);
+}
+
+.order-status-wait {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  gap: 10px;
+  background: #f6744c;
+  border-radius: 4px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  color: #ffffff;
+}
+
+.order-status-check {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  gap: 10px;
+  background: #6de22a;
+  border-radius: 4px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  color: #ffffff;
+}
+
+.table-type {
+  display: flex;
+  flex-direction: column;
+}
+.order-status-paid {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  gap: 10px;
+  background: #008311;
+  border-radius: 4px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  color: #ffffff;
+}
+.sidebar-cont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 700px;
+  position: fixed;
+  background-color: white;
+  overflow: hidden;
+  left: 0;
+  margin: 0;
+}
+
+.cashier-cont2 {
+  margin-left: 70px;
+  display: flex;
+
+  justify-content: space-between;
+}
+.home-cont {
+  background-color: #dee3df;
+  margin-left: 70px;
+  display: flex;
+  overflow: hidden;
+  justify-content: space-between;
+}
+
+.home-ttl {
+  margin-bottom: 10px;
+}
+.order-card-list {
+  margin-top: 0;
+  max-height: 750px;
+  overflow: hidden;
+  overflow-y: scroll;
+}
+
+.order-list-admin {
+  display: flex;
+  flex-direction: column;
+}
+
+.order-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 32px;
+  gap: 10px;
+  width: 530px;
+  height: 120px;
+  background: #ffffff;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.4);
+  border-radius: 8px;
+  margin-bottom: 16px;
+}
+
+.order-table {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 36px;
+  color: #353535;
+}
+
+.order-receiver {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 30px;
+  color: #353535;
+}
+
+.order-id {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: rgba(53, 53, 53, 0.6);
+}
+
+.order-status-wait {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  gap: 10px;
+  background: #f6744c;
+  border-radius: 4px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  color: #ffffff;
+}
+
+.order-status-check {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  gap: 10px;
+  background: #6de22a;
+  border-radius: 4px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  color: #ffffff;
+}
+
+.table-type {
+  display: flex;
+  flex-direction: column;
+}
+.order-status-paid {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  gap: 10px;
+  background: #008311;
+  border-radius: 4px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  color: #ffffff;
+}
+/* screenwidth less than 2048px
+--------------------------------------------------------------------- */
+@media only screen and (max-width: 2048px) {
+  .cashier-cont2 {
+    display: flex;
+    margin-left: 70px;
+    justify-content: space-between;
+  }
+  .home-cont {
+    background-color: #dee3df;
+    margin-left: 70px;
+    display: flex;
+    width: 100%;
+    overflow: hidden;
+    justify-content: space-between;
+    height: 100vh;
+  }
+
+  .order-detail {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .detail-cont {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    width: 416px;
+    padding: 70px 26px;
+  }
+
+  .detail-cont h1 {
+    margin-top: -20px;
+  }
+
+  .order-card {
+    width: 90%;
+  }
+}
+
+/* screenwidth less than 1280px
+--------------------------------------------------------------------- */
+@media only screen and (max-width: 1280px) {
+  .detail-cont h1 {
+    margin-top: 10px;
+  }
+  .detail-cont {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    width: 416px;
+    padding: 0px 26px;
+  }
+}
+
+/* screenwidth less than 1024px
+--------------------------------------------------------------------- */
+@media only screen and (max-width: 1024px) {
+}
+
+/* screenwidth less than 900px
+--------------------------------------------------------------------- */
+@media only screen and (max-width: 900px) {
+}
+
+/* mobile wide/smaller tablets
+---------------------------------------------------------------------- */
+
+@media only screen and (max-width: 768px) {
+}
+
+/* media  phone  */
+
+@media only screen and (max-width: 392px) {
+}
+
+/* media phone */
+@media only screen and (max-width: 375px) {
 }
